Implementacao dos misseis e da colisao.
Alem da implementacao dos misseis e da colisao, foi feita
um refatoracao do codigo, renomeando de arquivos e funcoes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "files.associations": {
-        "criainimigo.h": "c"
+        "criainimigo.h": "c",
+        "variaveisglobais.h": "c",
+        "criaobjetos.h": "c",
+        "teclado.h": "c",
+        "atualizajogo.h": "c",
+        "criamisseis.h": "c",
+        "criamissil.h": "c",
+        "telaprincipal.h": "c",
+        "criaheroi.h": "c"
     }
 }
