--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         "freeglut.h": "c",
         "carregatextura.h": "c",
         "stdio.h": "c",
-        "math.h": "c"
+        "math.h": "c",
+        "sdl_mixer.h": "c"
     }
 }
